--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     ],
     "require": {
         "php": ">=5.3.0",
-        "ext-gd": ">=2.1.0"
+        "ext-gd": "*"
     },
     "autoload": {
         "psr-4": {
